--- a/UpdateProfile.html
+++ b/UpdateProfile.html
@@ -298,9 +298,9 @@
 															  console.log(error);
 															});
 
-															firebase.database().ref('users/' + uid).set({
-																email: enteredEmail
-															});
+															//firebase.database().ref('users/' + uid).set({
+															//	email: enteredEmail
+															//});
 												 		}
 											 		}
 											 		catch(ex)
