--- a/UpdateProfile.html
+++ b/UpdateProfile.html
@@ -120,7 +120,7 @@
 															firebase.database().ref('/users/' + uid).once('value').then(function(snapshot) {
 															  if(snapshot.val()==null || snapshot.val().email=="")
 															  {
-																  firebase.database().ref('users/' + uid).set({
+																  firebase.database().ref('users/' + uid).update({
 																    email: email
 																  }).then(function(){
 															  		// Update successful.
@@ -203,7 +203,7 @@
 														if(userType!=currentUserType)
 														{
 															console.log("setting userType")
-															firebase.database().ref('users/' + uid).set({
+															firebase.database().ref('users/' + uid).update({
 															    userType: userType
 															}).then(function() {
 															  // Update successful.
@@ -215,19 +215,19 @@
 														}
 														if(course!=currentCourse)
 														{
-															firebase.database().ref('users/' + uid).set({
+															firebase.database().ref('users/' + uid).update({
 															    course: course
 															});
 														}
 														if(courseId!=currentCourseId)
 														{
-															firebase.database().ref('users/' + uid).set({
+															firebase.database().ref('users/' + uid).update({
 															    courseId: courseId
 															});
 														}
 														if(avatar!=currentAvatar)
 														{
-															firebase.database().ref('users/' + uid).set({
+															firebase.database().ref('users/' + uid).update({
 															    gender: avatar
 															});
 														}
@@ -298,9 +298,9 @@
 															  console.log(error);
 															});
 
-															//firebase.database().ref('users/' + uid).set({
-															//	email: enteredEmail
-															//});
+															firebase.database().ref('users/' + uid).update({
+																email: enteredEmail
+															});
 												 		}
 											 		}
 											 		catch(ex)
