--- a/UpdateProfile.html
+++ b/UpdateProfile.html
@@ -143,7 +143,7 @@
 												 			if(snapshot.val()!=null)
 												 			{
 												 				currentCourses="";
-												 				currentcourseids="";
+												 				currentCourseIds="";
 																if(snapshot.val().Algebra!=null)
 																{
 																	currentCourses+="Algebra ";
