--- a/Chat.html
+++ b/Chat.html
@@ -85,7 +85,7 @@
           var user = firebase.auth().currentUser;
           if(!user)
           {
-            window.location.replace("Login.html");
+            //window.location.replace("Login.html");
           }
           var uid=user.uid;
           var currentCourse="";
