--- a/Chat.html
+++ b/Chat.html
@@ -103,7 +103,8 @@
               currentCourseId="";
             }
           });
-
+          console.log("currentCourse="+currentCourse);
+          console.log("currentCourseId="+currentCourseId);
           if(currentCourse!=null && currentCourse!="" && currentCourseId!=null && currentCourseId!="")
           {
             return firebase.database().ref('/'+currentCourse+'/'+ currentCourseId+'/chat');
