Changed color to cyan

--- a/Chat.html
+++ b/Chat.html
@@ -44,7 +44,7 @@
   </head>
   <body>
     <!-- CHAT MARKUP -->
-    <div class="scroll-pane">
+    <div style="color:cyan" class="scroll-pane">
       <header>Chat, Ask Questions, and Write Solutions Here</header>
       <hr />
       <hr />
